--- a/templates/vacancies2.html
+++ b/templates/vacancies2.html
@@ -101,7 +101,7 @@
 	<script>
 	function callApi(updtype, vacid)
 		{
-		var getUrl = "http://vacancypriority.azurewebsites.net/api/" + updtype + "/" + vacid
+		var getUrl = "https://vacancypriority.azurewebsites.net/api/" + updtype + "/" + vacid
 
 		var xmlHttp = new XMLHttpRequest();
 		  xmlHttp.open( "GET", getUrl, false ); // false for synchronous request
