--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
     <div class="container">
 		<div class="am-container">
 			<div class="am-image"> <img src="css/logo-scalo.jpg"> </div>
-			<div class="am-text"> | reaction test </div>
+			<div class="am-text"> | vacancy priority </div>
 		</div>
 		
 		
