--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
 		<br>
 		
 		<div>
-			<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for clients of vacancies..." title="Search for clients of vacancies">
+			<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for clients or vacancies..." title="Search for clients or vacancies">
 		</div>
 		
         <table class="table custom-table" id="myTable">
