--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -1,106 +1,147 @@
+:root {
+		--blue: #2CD383;
+		--green: #28a745;
+		--white: #fff;
+		--gray: #6c757d;
+		--gray-dark: #343a40;
+		--primary: #2CD383;
+		--secondary: #6c757d;
+		--success: #28a745;
+		--info: #17a2b8;
+		--warning: #ffc107;
+		--danger: #dc3545;
+		--light: #f8f9fa;
+		--dark: #343a40;
+		--font-family-sans-serif: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+		--font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+	}
+
+
 body {
-  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  background-color: #fff;
-  font-weight: 300; }
+	  margin: 0;
+	  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+	  font-size: 1rem;
+	  font-weight: 300;
+	  line-height: 1.5;
+	  color: #212529;
+	  text-align: left;
+	  background-color: #fff;
+	}
 
-p {
-  color: #b3b3b3;
-  font-weight: 300; }
 
-h1, h2, h3, h4, h5, h6,
-.h1, .h2, .h3, .h4, .h5, .h6 {
-  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }
+.content { padding: 2rem 0; }
 
-a {
-  -webkit-transition: .3s all ease;
-  -o-transition: .3s all ease;
-  transition: .3s all ease; }
-  a, a:hover {
-    text-decoration: none !important; }
+.container-fluid { width: 100%; padding-right: auto; padding-left: 20px; margin-right: auto; margin-left: 15px; }
+	@media (min-width: 576px) { .container { max-width: 540px; } }
+	@media (min-width: 768px) { .container { max-width: 720px; } }
+	@media (min-width: 992px) { .container { max-width: 960px; } }
+	@media (min-width: 1200px) { .container { max-width: 1000px; } }
 
-.content {
-  padding: 2rem 0; }
+.table-responsive { display: block; width: 100%; padding-top: 20px;}
 
-h2 {
-  font-size: 20px; position: relative; color: #7F7F7F}
- 
- 
+.table { width: 90%; margin-bottom: 1rem; color: #000; border-collapse: collapse; } 
+
+.custom-table { min-width: 2000px; }
+.custom-table thead tr, .custom-table thead th { border-top: none; border-bottom: none !important; font-size: 12px; margin: auto; }
+.custom-table tbody th, .custom-table tbody td { color: #777; font-weight: 100; padding-bottom: 7px; padding-top: 7px; font-weight: 400; font-size: 13px; }
+.custom-table tbody th small, .custom-table tbody td small { color: #808080; font-weight: 300; font-size: 11px;}
+.custom-table tbody tr th, .custom-table tbody tr td { position: relative; -webkit-transition: .3s all ease; -o-transition: .3s all ease; transition: .3s all ease; }
+.custom-table tbody tr th:before, .custom-table tbody tr th:after, .custom-table tbody tr td:before, .custom-table tbody tr td:after {
+	-webkit-transition: .3s all ease;
+	-o-transition: .3s all ease;
+	transition: .3s all ease;
+	content: "";
+	left: 0;
+	right: 0;
+	position: absolute;
+	height: 1px;
+	background: #2CD383;
+	width: 100%;
+	opacity: 0;
+	visibility: hidden; }
+.custom-table tbody tr th:before, .custom-table tbody tr td:before { top: -1px; }
+.custom-table tbody tr th:after, .custom-table tbody tr td:after { bottom: -1px; }
+.custom-table tbody tr:hover th, .custom-table tbody tr:hover td { background: rgba(0, 123, 0, 0.03); height: 50%; }
+.custom-table tbody tr:hover th:before, .custom-table tbody tr:hover th:after, .custom-table tbody tr:hover td:before, .custom-table tbody tr:hover td:after { opacity: 1; visibility: visible; }
+.custom-table tbody tr.active th, .custom-table tbody tr.active td { background: rgba(0, 123, 255, 0.02); }
+.custom-table tbody tr.active th:before, .custom-table tbody tr.active th:after, .custom-table tbody tr.active td:before, .custom-table tbody tr.active td:after { opacity: 1; visibility: visible; }
+
+.th { text-align: inherit; }
+.table th, .table td { padding: 0.75rem; vertical-align: top; border-top: 1px solid #dee2e6;  column-width: length; color: #7F7F7F}
+.table thead th { vertical-align: bottom; border-bottom: 2px solid #dee2e6; }
+
+
+small, .small { font-size: 90%; font-weight: 300; }
+
+
+.d-block {display: block !important;}
+.mb-5, .my-5 { margin-bottom: 3rem !important; }	
+a { -webkit-transition: .3s all ease; -o-transition: .3s all ease; transition: .3s all ease; }
+a, a:hover { text-decoration: none !important; }
+
+p { color: #b3b3b3; font-weight: 100; }
+
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+	font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; 
+	font-size: 12px;
+  }
+  
+  
+  
  /*# AM Custom styles - START */
  
 .am-container {display: flex; align-items: center; justify-content: left}
-img {max-width: 100%}
-.am-image {flex-basis: 10%}
-.am-text {font-size: 30px; padding-left: 10px; padding-top: 10px; color: #7F7F7F}  
+
+.am-image {background-image: url('img/logo-scalo.jpg'); height: 37px; width: 110px; background-repeat: no-repeat; margin-top: -7px}
+.am-text {font-size: 30px; color: #7F7F7F; font-weight: 100; margin-left: 5px}  
 .am-text-small {font-size: 16px; padding-left: 10px; padding-top: 16px; color: #7F7F7F}  
 
-.up-button {background-image: url("arrow-up0.png"); height: 12px; width: 20px; border: none; transition-duration: 0.2s; background-repeat: no-repeat;}
-.up-button:hover {background-image: url("arrow-up1.png"); background-repeat: no-repeat;}
 
-.down-button {background-image: url("arrow-down0.png"); height: 12px; width: 20px; border: none; transition-duration: 0.2s; background-repeat: no-repeat;}
-.down-button:hover {background-image: url("arrow-down1.png"); background-repeat: no-repeat;}
+
+.am-button-descr {background-image: url("img/descr0.png"); height: 30px; width: 30px; border: none; background-repeat: no-repeat; margin-left: 150px; margin-top: 10px; }
+.am-button-descr:hover {background-image: url("img/descr1.png");}
+
+.am-button-rep {background-image: url("img/rep0.png"); height: 30px; width: 30px; border: none; background-repeat: no-repeat; margin-left: 50px; margin-top: 10px; }
+.am-button-rep:hover {background-image: url("img/rep1.png");}
+
+.am-button-attr {background-image: url("img/attr0.png"); height: 30px; width: 30px; border: none; background-repeat: no-repeat; margin-left: 50px; margin-top: 10px; }
+.am-button-attr:hover {background-image: url("img/attr1.png");}
+
 
 #myInput {
-  background-image: url('/css/search-ico1.png');
-  background-position: 10px 7px;
+  background-image: url('/css/img/search-ico1.png');
+  background-position: 5px 7px;
   background-repeat: no-repeat;
-  width: 40%;
+  width: 100%;
   height: 30px;
   font-size: 14px;
-  padding: 12px 12px 12px 30px;
-  border: none;
-  margin-bottom: 8px;
+  padding: 0px 0px 0px 30px;
+  border: 1px;
+  margin-bottom: 16px;
+  margin-top: 5px;
   outline: none;
   display: block;
 }
 
+.info {background-image: url("css/img/info_s.png"); size: 80%; border: none; background-repeat: no-repeat;}
+
+.lbl span { display: none; }
+.lbl:hover span {
+	padding: 5px 20px 5px 5px;
+	top: 15px;
+	left: -30px;
+	margin: 15px;
+	display: block;
+	position: absolute;
+	background-color: rgba(80, 80, 80, 0.9);
+	font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; 
+	color: #eee;
+	z-index: 1;
+	font-size: 80%;
+	width: max-content; 
+}
+
+th.lbl {background-image: url("img/info_s.png"); height: 10px; width: 10px; border: none; background-repeat: no-repeat; margin-top: 10px; margin-left: 20px}
+
+	  
  /*# AM Custom styles - END */
- 
-
-
-.custom-table {
-  min-width: 500px; font-size: 13px;}
-  .custom-table thead tr, .custom-table thead th {
-    border-top: none;
-    border-bottom: none !important; }
-  .custom-table tbody th, .custom-table tbody td {
-    color: #777;
-    font-weight: 400;
-    padding-bottom: 10px;
-    padding-top: 10px;
-    font-weight: 300; }
-    .custom-table tbody th small, .custom-table tbody td small {
-      color: #b3b3b3;
-      font-weight: 300;  
-	  }
-  .custom-table tbody tr th, .custom-table tbody tr td {
-    position: relative;
-    -webkit-transition: .3s all ease;
-    -o-transition: .3s all ease;
-    transition: .3s all ease; }
-    .custom-table tbody tr th:before, .custom-table tbody tr th:after, .custom-table tbody tr td:before, .custom-table tbody tr td:after {
-      -webkit-transition: .3s all ease;
-      -o-transition: .3s all ease;
-      transition: .3s all ease;
-      content: "";
-      left: 0;
-      right: 0;
-      position: absolute;
-      height: 1px;
-      background: #2CD383;
-      width: 100%;
-      opacity: 0;
-      visibility: hidden; }
-    .custom-table tbody tr th:before, .custom-table tbody tr td:before {
-      top: -1px; }
-    .custom-table tbody tr th:after, .custom-table tbody tr td:after {
-      bottom: -1px; }
-  .custom-table tbody tr:hover th, .custom-table tbody tr:hover td {
-    background: rgba(0, 123, 255, 0.03); }
-    .custom-table tbody tr:hover th:before, .custom-table tbody tr:hover th:after, .custom-table tbody tr:hover td:before, .custom-table tbody tr:hover td:after {
-      opacity: 1;
-      visibility: visible; }
-  .custom-table tbody tr.active th, .custom-table tbody tr.active td {
-    background: rgba(0, 123, 255, 0.03); }
-    .custom-table tbody tr.active th:before, .custom-table tbody tr.active th:after, .custom-table tbody tr.active td:before, .custom-table tbody tr.active td:after {
-      opacity: 1;
-      visibility: visible; }
