--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,8 @@
 				<div class="am-container">
 					<!-- <div class="am-image"> <img src="css/logo-scalo.jpg"> </div> -->
 					<div class="am-image"></div>
-					<div class="am-text"> | vacancy priority -> logged as: {{usrname}} (level: {{usrlvl}}) </div>
+					<div class="am-text"> | vacancy priority</div>		<!--  -> logged as: {{usrname}} (level: {{usrlvl}})  -->
+			
 					<div> <button class="am-button-descr"> </button> </div>
 					<div> <button class="am-button-rep"> </button> </div>
 					<div> <button class="am-button-attr"> </button> </div>
