--- a/templates/index.html
+++ b/templates/index.html
@@ -25,8 +25,8 @@
 					<div class="am-image"></div>
 					<div class="am-text"> | vacancy priority</div>		<!--  -> logged as: {{usrname}} (level: {{usrlvl}})  -->
 			
-					<div> <button class="am-button-descr"> </button> </div>
-					<div> <button class="am-button-rep"> </button> </div>
+					<!-- <div> <button class="am-button-descr"> </button> </div>	-->
+					<!-- <div> <button class="am-button-rep"> </button> </div>		-->
 					
 					{% if usrlvl == "admin" %}
 					<div> <button class="am-button-attr"> </button> </div>
