--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -12,6 +12,8 @@
 		--danger: #dc3545;
 		--light: #f8f9fa;
 		--dark: #343a40;
+		--lightgreen: #74FF7D;
+		--lightred: #FF7777; 
 		--font-family-sans-serif: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 		--font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 	}
@@ -163,4 +165,4 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 
 	  
- /*# AM Custom styles - END */
+ /*# AM Custom styles - END		bottom /calc(100% - 20px) calc(100% - 20px) no-repeat;		 */
