--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
 					<!-- <div> <button class="am-button-rep"> </button> </div>		-->
 					
 					{% if usrlvl == "admin" %}
-					<div> <button class="am-button-attr" href="/clientatr"> </button> </div>
+					<div> <button class="am-button-attr" onclick="/clientatr"> </button> </div>
 					{% endif %}
 					
 					<div class="am-usrname"> <b>logged as:</b> {{usrname}} <small class="d-block"> <b>user level:</b> {{usrlvl}}</small> </div>
